--- a/examples/backpressure/index.html
+++ b/examples/backpressure/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row-fluid">
       <p>Lossy Pausable using .pauseableBuffered for mouse movements</p>
-      <label for="losslessToggle">Lossless Toggle<label>
+      <label for="losslessToggle">Lossless Toggle</label>
       <input type="checkbox" id="losslessToggle" checked />
       <ul id="losslessResults"></ul>
     </div>
